# iatronix

./: .env.example  .env.test.example  .gitignore  AGENT_ARCHITECTURE.md  AGENT_INTEGRATION_GUIDE.md  AUDIT.md  COMPLEX_QUERY_SCALING_PLAN.md  Code_refactor.md  DEPLOY_AND_SCALING.md  ENGINEERING_JOURNAL.md  IATRONIX_ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_NOTES.md  README.md  REFACTOR_PLAN.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/.claude-flow/data/: ranked-context.json
backend/.claude-flow/sessions/: session-1774414109280.json  session-1774418665136.json  session-1774437144112.json  session-1774438624257.json
backend/app/: config.py  main.py
backend/app/core/: auth.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: api_key_auth.py  firebase_auth.py  payload_limit.py  rate_limit.py
backend/app/models/: __init__.py  base.py  document.py  query_audit.py  query_cache.py  query_log.py  search_history.py  service_key.py  user.py
backend/app/schemas/: auth.py  models.py  query.py
backend/app/services/: answer_quality.py  article_registry.py  byok.py  cache.py  chat_service.py  circuit_breaker.py  citation_graph.py  citation_validator.py  cost_estimator.py  data_fetcher.py  deep_search.py  deep_search_sources.py  drug_linker.py  dspy_lm.py  dspy_modules.py  dspy_signatures.py  embedder.py  evidence_floor.py  grounding_gate.py  ingestion.py  (+23 more)
backend/config/: providers.yaml
backend/data/: drug_dictionary.json  indian_drugs.json  medical_journals.json
backend/migrations/: env.py
backend/tests/: test_answer_quality.py  test_article_registry.py  test_citation_density.py  test_citation_tokens.py  test_deep_search.py  test_deep_search_sources.py  test_dspy_comparison.py  test_evidence_floor.py  test_keystore.py  test_langgraph_wiring.py  test_m1_prompt_engine.py  test_m2_url_builder.py  test_m3a_drug_rag.py  test_m3b_scraping.py  test_m4_semantic_cache.py  test_no_generate_mode.py  test_prompt_injection.py  test_provider_adapters.py  test_provider_caching.py  test_provider_endpoints.py  test_provider_registry.py  test_stance_neutralizer.py  test_stance_neutralizer_live.py
(+162 files in other folders)
