[project]
name = "iatronix-backend"
version = "0.1.0"
description = "Medical RAG Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "alembic>=1.14.0",
    "tenacity>=9.0.0",
    "json-repair>=0.30.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "python-json-logger>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.2.0",
    "pybreaker>=1.2.0",
    "python-Levenshtein>=0.26.0",
    "metaphone>=0.6",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
